20241214-1 some stuff from November idk

--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,7 @@ app/static/jquery*.js
 # Do not exclude all CSS files because of Font Awesome
 app/static/*.css
 app/static/*.css.map
+
+# Added by cargo
+
+/target
